Sgp4Prop_v9.4/Sgp4Prop/SampleCode/Julia/wrappers/AstroFuncDll.jl


#############################################################################
# Converts covariance matrix ECI to EFG.
# EFG = Earth Fixed Greenwich
# ECI = Earth Centered Inertial - need to determine TEME or J2K
function CovMtxECIToEFG(thetaG, covECI)
   covEFG = zeros(Float64, 6, 6)
   ccall( (:CovMtxECIToEFG,libname) 
     , Nothing
     , (Float64
     , Ref{Float64}
     , Ref{Float64})
     , thetaG,covECI,covEFG)
   return covEFG
end

#############################################################################
# Converts covariance matrix EFG to ECI.
# EFG = Earth Fixed Greenwich
# ECI = Earth Centered Inertial - need to determine TEME or J2K
function CovMtxEFGToECI(thetaG, covEFG)
   covECI = zeros(Float64, 6, 6)
   ccall( (:CovMtxEFGToECI,libname) 
     , Nothing
     , (Float64
     , Ref{Float64}
     , Ref{Float64})
     , thetaG,covEFG,covECI)
   return covECI
end

#############################################################################
# Converts 6x6 symmetric Matrix/2D array to 1D array of 21 elements (lower triangular of a 6x6 symmetric matrix)
function Mtx6x6ToLTA21(symMtx6x6)
   lta21 = zeros(Float64, 21)
   ccall( (:Mtx6x6ToLTA21,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64})
     , symMtx6x6,lta21)
   return lta21
end

#############################################################################
# Converts 1D array of 21 elements (lower triangular of a 6x6 symmetric matrix) to a 6x6 symmetric matrix
function LTA21ToMtx6x6(lta21)
   symMtx6x6 = zeros(Float64, 6, 6)
   ccall( (:LTA21ToMtx6x6,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64})
     , lta21,symMtx6x6)
   return symMtx6x6
end

#############################################################################
# Converts 9x9 symmetric Matrix/2D array to 1D array of 45 elements (lower triangular of a 9x9 symmetric matrix)
function Mtx9x9ToLTA45(symMtx9x9)
   lta45 = zeros(Float64, 45)
   ccall( (:Mtx9x9ToLTA45,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64})
     , symMtx9x9,lta45)
   return lta45
end

#############################################################################
# Converts 1D array of 45 elements (lower triangular of a 9x9 symmetric matrix) to a 9x9 symmetric matrix
function LTA45ToMtx9x9(lta45)
   symMtx9x9 = zeros(Float64, 9, 9)
   ccall( (:LTA45ToMtx9x9,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64})
     , lta45,symMtx9x9)
   return symMtx9x9
end

#############################################################################
# Propagate xyzDate covariance forward to the propagation time
function PropCovFrState(rms, consider, stateArray, cov)
   propCov = zeros(Float64, 6, 6)
   ccall( (:PropCovFrState,libname) 
     , Nothing
     , (Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , rms,consider,stateArray,cov,propCov)
   return propCov
end

#############################################################################
# Rotates the ECI covariance to UVW
# Note: This method uses the global Earth constants so make sure that you select the proper Earth model by calling the EnvConst/EnvSetGeoIdx method
function CovMtxECIToEqnx(pos, vel, covMtxECI)
   covMtxEqnx = zeros(Float64, 9, 9)
   ccall( (:CovMtxECIToEqnx,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , pos,vel,covMtxECI,covMtxEqnx)
   return covMtxEqnx
end

#############################################################################
# Rotates the UVW covariance to ECI
# Note: This method uses the global Earth constants so make sure that you select the proper Earth model by calling the EnvConst/EnvSetGeoIdx method
function CovMtxEqnxToECI9x9(pos, vel, covEqnx)
   covMtxECI = zeros(Float64, 9, 9)
   ccall( (:CovMtxEqnxToECI9x9,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , pos,vel,covEqnx,covMtxECI)
   return covMtxECI
end

#############################################################################
# Rotates the UVW covariance to ECI
# Note: This method uses the global Earth constants so make sure that you select the proper Earth model by calling the EnvConst/EnvSetGeoIdx method
function CovMtxEqnxToUVW9x9(pos, vel, covEqnx)
   covMtxUVW = zeros(Float64, 9, 9)
   ccall( (:CovMtxEqnxToUVW9x9,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , pos,vel,covEqnx,covMtxUVW)
   return covMtxUVW
end

#############################################################################
# Update (propagate) covariance to a future time with a supplied covariance, state transition matrix
# consider parameter and RMS. Consider parameter is applied to the drag term only.
# Full covariance matrix is multiplied by RMS squared.  State transition matrix can be obtained from 
# SpProp.SpGetStateMtx or supplying your own. State matrix, input and output covariance must be in 
# matching coordinate systems.
function CovMtxUpdate(rmsIn, consider, cov, stateArray)
   propCov = zeros(Float64, 6, 6)
   ccall( (:CovMtxUpdate,libname) 
     , Nothing
     , (Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , rmsIn,consider,cov,stateArray,propCov)
   return propCov
end

#############################################################################
# Annual Aberration calculated using equations from Astronomical Algorithms, Jean Meeus, 2nd Edition with Corrections as of June 15, 2005
function AberrationAnnual(ra, decl, dS50UTC)
   raDelta = zeros(Float64, 1)
   decDelta = zeros(Float64, 1)
   ccall( (:AberrationAnnual,libname) 
     , Nothing
     , (Float64
     , Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64})
     , ra,decl,dS50UTC,raDelta,decDelta)
   return raDelta[1], decDelta[1]
end

#############################################################################
# Diurnal Aberration is due to the rotation of the Earth about it's axis. This is only valid for ground based sensors.
# Diurnal Aberration calculated using equations from Explanatory Supplement to the Astronomical Almanac 3rd Edition, 2013
function AberrationDiurnal(ra, decl, dS50UTC, senPos)
   raDelta = zeros(Float64, 1)
   decDelta = zeros(Float64, 1)
   ccall( (:AberrationDiurnal,libname) 
     , Nothing
     , (Float64
     , Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , ra,decl,dS50UTC,senPos,raDelta,decDelta)
   return raDelta[1], decDelta[1]
end

#############################################################################
# Sets JPL parameters
# Notes: Set JPL parameters will be used by SP, SPG4-XP, and anything that requires access to JPL data
function JplSetParameters(jplFile, ds50Start, ds50Stop)
   ccall( (:JplSetParameters,libname) 
     , Nothing
     , (Cstring
     , Float64
     , Float64)
     , jplFile,ds50Start,ds50Stop)
end

#############################################################################
# Gets JPL parameters
function JplGetParameters()
   jplFile = " "^512
   ds50Start = zeros(Float64, 1)
   ds50Stop = zeros(Float64, 1)
   ccall( (:JplGetParameters,libname) 
     , Nothing
     , (Cstring
     , Ref{Float64}
     , Ref{Float64})
     , jplFile,ds50Start,ds50Stop)
   return jplFile, ds50Start[1], ds50Stop[1]
end

#############################################################################
# Resets JPL parameters & removes JPL ephemeris data
function JplReset()
   ccall( (:JplReset,libname) 
     , Nothing
     , ())
end

#############################################################################
# Computes various Sun and Moon vectors base on loaded JPL data at the specified time.
# Note: if JPL data isn't loaded or available, all output parameters are set to zero
function JplCompSunMoonVec(ds50UTC)
   uvecSun = zeros(Float64, 3)
   sunVecMag = zeros(Float64, 1)
   uvecMoon = zeros(Float64, 3)
   moonVecMag = zeros(Float64, 1)
   ccall( (:JplCompSunMoonVec,libname) 
     , Nothing
     , (Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , ds50UTC,uvecSun,sunVecMag,uvecMoon,moonVecMag)
   return uvecSun, sunVecMag[1], uvecMoon, moonVecMag[1]
end

#############################################################################
# Computes Sun and Moon position vectors base on loaded JPL data at the specified time.
# Note: if JPL data isn't loaded or available, all output parameters are set to zero
function JplCompSunMoonPos(ds50UTC)
   sunVec = zeros(Float64, 3)
   moonVec = zeros(Float64, 3)
   ccall( (:JplCompSunMoonPos,libname) 
     , Nothing
     , (Float64
     , Ref{Float64}
     , Ref{Float64})
     , ds50UTC,sunVec,moonVec)
   return sunVec, moonVec
end

#############################################################################
# Removes the JPL ephemeris from memory
function RemoveJpl()
   ccall( (:RemoveJpl,libname) 
     , Nothing
     , ())
end

#############################################################################
# Rotates position and velocity vectors from TEME of Epoch to TEME of Date
function TemeEpochToDate(nutationTerms, epochDs50TAI, dateDs50TAI, posEpoch, velEpoch)
   posDate = zeros(Float64, 3)
   velDate = zeros(Float64, 3)
   ccall( (:TemeEpochToDate,libname) 
     , Nothing
     , (Int32
     , Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , nutationTerms,epochDs50TAI,dateDs50TAI,posEpoch,velEpoch,posDate,velDate)
   return posDate, velDate
end

#############################################################################

end #of module AstroFuncDll
# ========================= End of auto generated code ==========================
